flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-redis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-redis
  template:
    metadata:
      labels:
        app: flask-redis
    spec:
      containers:
        - name: flask-container
          image: acresginchobykhalqallahy.azurecr.io/flaskapp:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
        - name: redis-container
          image: redis
          ports:
            - containerPort: 6379
